<resources>
    <string name="app_name">百人一首</string>
    <string name="detail">詳細</string>
    <string name="authorLabel">作者　　：</string>
    <string name="topLabel">上の句　：</string>
    <string name="bottomLabel">下の句　：</string>
    <string name="kimarijiLabel">決まり字：</string>
    <string name="author">作者</string>
    <string name="top">上の句</string>
    <string name="bottom">下の句</string>
    <string name="kimariji">決まり字</string>
    <string name="translation">現代語訳</string>
    <string name="authorCheck">作者表示</string>
    <string name="topCheck">上の句表示</string>
    <string name="bottomCheck">下の句表示</string>
    <string name="kimarijiCheck">決まり字表示</string>
    <string name="back">戻る</string>
    <string name="learnComplete">暗記できました。</string>
</resources>