<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


  	<LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center">

    	<CheckBox
        	android:id="@+id/authorCheck"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="30dp"
			android:checked="true"
        	android:text="@string/authorCheck" />

    	<CheckBox
        	android:id="@+id/topCheck"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="30dp"
			android:checked="true"
        	android:text="@string/topCheck" />

    	<CheckBox
        	android:id="@+id/bottomCheck"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="30dp"
			android:checked="true"
        	android:text="@string/bottomCheck" />

    	<CheckBox
        	android:id="@+id/kimarijiCheck"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
			android:checked="true"
        	android:text="@string/kimarijiCheck" />
    
  	</LinearLayout>
  
    <ListView
      android:id="@+id/listView"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:divider="@color/line"
      android:dividerHeight="3dp"
      android:background="@color/background" />
</LinearLayout>